# Talk_to_us

./: Readme.md
backend/: Cargo.toml
backend/src/: handler.rs  login.rs  main.rs  ticket.rs
backend/src/entities/: agent_tags.rs  agents.rs  analytics.rs  attachments.rs  images.rs  messages.rs  mod.rs  prelude.rs  replies.rs  tags.rs  ticket_history.rs  ticket_tags.rs  tickets.rs  users.rs
frontend/: agent_dashboard.html  answer.html  create.html  index.HTML  login.HTML  registration.html  styles.css  user_dashboard.html
frontend/scripts/: create.js  register.js  user_dasboard.js
frontend/styles/: register.css
