[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
sea-orm-macros = "0.12"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
validator = "0.18"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum_typed_multipart = "0.16"
tokio-fs = "0.1"
thiserror = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
http = "0.2"
rand_core = "0.6"